2011-01-24
 * changed man pages format - add rts2.ent file with entities for common options etc..

2011-01-14
 * QueuedTarget class

2011-01-11
 * set api (HTTP-based)

2011-01-10
 * added Time arrays

2011-01-03
 * .rts2 page expansion
 * HIGHEST, WESTEAST queue types

2010-12-26
 * added parameters for focusing weak images (e.g. from Ondrejov 65cm)

2010-12-15
 * added reset-constraints option to rts2-target

2010-12-14
 * maxRepeat constraint
 * added comments to indicate failed Auger cuts

2010-12-11
 * added rnight query for ready night master state

2010-12-07
 * fixed redhat and slackware init files
 * fixed ARC support, confirms it is working

2010-11-28
 * added ExecutorQueue for queues inside executor

2010-11-27
 * change default sorting of devices in rts2-mon

2010-11-22
 * stop move state

2010-11-11
 * rts2-user can delete users

2010-11-08
 * autofocusing scripts

2010-11-07
 * scripting for image processing script

2010-10-27
 * added "VT" (Value Type) function to stdin/stdout scripting
2010-10-26
 * added "move" function to stdin/stdout scripting
 * added ThorLaser driver

2010-10-11
 * compute expected script duration
 * allow specifiing tempdisable in days, hours or weeks

2010-10-08
 * added messages mailing/commands/..

2010-09-29
 * added id-only and name-only to rts2-targetinfo and rts2-target

2010-09-25
 * added capability to delete targets

2010-09-24
 * add PI and program name (as labels)

2010-09-21
 * allow users to specify minimal length for expression format

2010-09-11
 * moved Target to rts2db namespace, and some associated namespace changes

2010-09-09
 * tempdisable editing options
 * name resolving

2010-08-18
 * constraints support (.xsd and .xml for constraint files..)

2010-08-04
 * boolean array support

2010-07-15
 * support for multiple extension images (on client side)

2010-07-11
 * BOP_WAIT_TRIG, BOP_WILL_EXPOSE and related machinery

2010-06-12
 * Camera filter focusing offsets

2010-05-06