@@ -69,7 +69,6 @@
     &optiongnu;
 
     <variablelist>
-      &deviceapplist;
       <varlistentry>
         <term><option>-p <replaceable class="parameter">path</replaceable></option></term>
 	<listitem>
@@ -78,6 +77,7 @@
 	   </para>
 	</listitem>
       </varlistentry>
+      &deviceapplist;
     </variablelist>
   </refsect1>
   <refsect1>
